Enable manual trigger for workflow dispatch
Added 'workflow_dispatch' to the GitHub Actions workflow configuration allowing for manual execution. This provides more flexibility in running the update_notion_supabase.yml job outside the scheduled times.

--- a/.github/workflows/update_notion_supabase.yml
+++ b/.github/workflows/update_notion_supabase.yml
@@ -4,6 +4,7 @@ on:
     schedule:
     # Planifie l'exécution du script tous les jours à 8h et 19h
         - cron: '0 8,19 * * *'
+    workflow_dispatch:
 
 jobs:
     update:
